[project]
name = "ao"
version = "0.1.0"
description = "Activation Oracle: Extract and inject activations for LLM interpretability research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.20.0",
    "jupyterlab>=4.0.0",
]
flash = [
    "flash-attn>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
